# guess-gpt

./: .buildpacks  .gitignore  Procfile  README.md  package-lock.json  package.json  pyproject.toml
app/: chat.py  console.py  context.py  models.py  prompts.py  routes.py  util.py
app/prompts/: create_prompt.j2  guess_system.j2
app/web-dist/: 404.html  index.html  index.txt  twenty.html  twenty.txt
app/web-dist/_next/static/chunks/: 222-405fe2c922b2d972.js  459-c05f2edde23afc6b.js  669-21bf31c52036d39d.js  956-a5098db4e4fa7e8d.js  main-app-babe26e5aac4aa38.js  main-d7048af0c5640998.js
app/web-dist/_next/static/chunks/app/: layout-910379feb693089e.js  page-b7129761b86c5d2a.js
app/web-dist/_next/static/chunks/app/twenty/: page-46ae724b0a12e933.js
scripts/: run.py
test/: test_scenarios.py
web/: Procfile  next.config.js  package-lock.json  package.json  tsconfig.json
web/api/: Client.ts  api.ts
web/app/: layout.tsx  page.tsx  providers.tsx
web/app/create/: page.tsx
web/app/guess/: page.tsx
web/app/guess/[id]/: page.tsx
web/app/twenty/: page.tsx
web/components/: Chat.tsx  FullScreen.tsx  InputBox.tsx  MessagesList.tsx
web/hooks/: useWindowHeight.ts
