[tool.poetry]
name = "guess-gpt"
version = "0.0.1"
description = ""
authors = ["David Byttow <david.byttow@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "3.11.2"
jupyter = "^1.0.0"
streamlit = "^1.21.0"
pydantic = "^1.10.7"
langchain = "^0.0.152"
openai = "^0.27.4"
flask = "^2.2.3"
quart = "^0.18.4"
quart-cors = "^0.6.0"
quart-schema = "^0.15.0"
sqlalchemy = "~1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
